--- a/BIKE.html
+++ b/BIKE.html
@@ -29,7 +29,7 @@
 							<a href="">CONTACT</a>
 						</li>
 					</ul>
-					<div class="logo"><!-- лого, картинка-->
+					<div class="logo"><!-- лого, картинкаmmnnmnn-->
 						
 					</div>
 				
