--- a/BIKE.html
+++ b/BIKE.html
@@ -7,35 +7,47 @@
 	<link rel="shortcut icon" href="imag/favicon.jpg">
 </head>
 <body>
-	<!--Хедер-->
-	<header>
-		<div class="primari"> <!--большая картинка в хедере-->
-			<img src="imag/primari.jpg">
-		</div> 
-			<div class="row"> <!--строка меню с лого-->
-					<ul class="menu-bar"><!--Пeнкты меню ссылками-->
-						<li class="abaut-item" id="li">
-							<a href="">ABOUT US </a>
-						</li>	
-						<li class="dot" id="li">.</li>
-						<li class="work-item" id="li">
-							<a href="">WORK</a>
-						</li>
-						<li class="shop-item" id="li">
-							<a href="">SHOP</a>
-						</li>
-						<li class="dot" id="li">.</li>
-						<li class="contact-item" id="li">
-							<a href="">CONTACT</a>
-						</li>
-					</ul>
-					<div class="logo"><!-- лого, картинкаmmnnmnn-->
-						
-					</div>
-				
-			</div>
-	
+<header><!--Хедер-->
+	<div class="primari"> <!--большая картинка в хедере-->
+		<img src="imag/primari.jpg">
+	</div> 
+	<div class="row"> <!--строка меню с лого-->
+		<ul class="menu-bar"><!--Пeнкты меню ссылками-->
+			<li class="abaut-item" id="li">
+				<a href="">ABOUT US </a>
+			</li>	
+			<li class="dot" id="li">.</li>
+			<li class="work-item" id="li">
+				<a href="">WORK</a>
+			</li>
+			<li class="shop-item" id="li">
+				<a href="">SHOP</a>
+			</li>
+			<li class="dot" id="li">.</li>
+			<li class="contact-item" id="li">
+				<a href="">CONTACT</a>
+			</li>
+			</ul>
+		<div class="logo"><!-- лого, картинкаmmnnmnn-->
+		</div>
+	</div>
+</header>
+<div>
+	<div class="container">
+		<div class="chain">
+			<img src="imag/cog.png">
+		<h1>A new generation of vintage bike</h1>
+		</div>
 
-	</header>
+		<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+	</div>
+</div>
+
+
+
+
+
+
 </body>
 </html>
